# 3D_UNET

./: README.md  environment.yaml  pred_v3.py  predictions_good.py  predictions_unet.py  predictions_v2.py  pyproject.toml  sweep_UNET.py  sweep_UNET_v2.py  sweep_config.yaml  sweep_v2.yaml  sweep_v3_accumulation.py  test.py  unet_opti.py  unet_opti2.py
