[tool.poetry]
name = "unet"
version = "0.1.0"
description = ""
authors = ["Samuel Bourgeat <samuel.kumar@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.1"
pyqt6 = "^6.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
