[tool.poetry]
name = "unet"
version = "0.1.0"
description = ""
authors = ["Samuel Bourgeat <samuel.kumar@hotmail.fr>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.1"
pyqt6 = "^6.7.0"
torch = "^2.3.1"
tifffile = "^2024.7.2"
scikit-image = "^0.24.0"
tqdm = "^4.66.4"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
